added modal structure to base.html for contact button in navbar, corrected class in fixed button in cart.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <!-- Floating Fixed button: Actions -->
-<div class="fixed-action-btn">
+<div class="fixed-action-btn hide-on-large-only">
     <span class="mr-20">Keep Shopping</span>
     <a id="add-to-cart-floating-btn" href="{% url 'products' %}" class="btn-floating btn-large modal-trigger waves-effect waves-light cyan darken-2">
         <i class="large material-icons">keyboard_arrow_left</i>
