--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                             <li><a href="{% url 'products' %}" class="waves-effect waves-light black-text btn">Products</a></li>
                             <li><a href="#" class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a></li>
                             <li><a href="#" class="waves-effect waves-light orange accent-2 black-text btn">About</a></li>
-                            <li><a href="#" class="waves-effect waves-light red btn">Contact</a></li>
+                            <li><a href="#contact-us-modal" class="waves-effect waves-light red btn modal-trigger">Contact</a></li>
                         </ul>
                     </div>
                     <div id="logo-image" class="logo-image-container">
@@ -116,7 +116,7 @@
                     <a href="{% url 'products' %}" class="waves-effect waves-light black-text btn">Products</a>
                     <a href="#" class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a>
                     <a href="#" class="waves-effect waves-light orange accent-2 black-text btn">About</a>
-                    <a href="#" class="waves-effect waves-light red btn">Contact</a>
+                    <a href="#contact-us-modal" class="waves-effect waves-light red btn modal-trigger">Contact</a>
                 </div>
                 {% include 'includes/mobile_top_header.html' %}
             </div>
@@ -202,37 +202,78 @@
         </div>
     </div>
 
-{% if messages %}
-<div class="toast-container">
-    {% for message in messages %}
-        {% with message.level as level %}
-            {% if level == 40 %}
-                {% include 'includes/toasts/toast_error.html' %}
-            {% elif level == 30 %}
-                {% include 'includes/toasts/toast_warning.html' %}
-            {% elif level == 25 %}
-                {% include 'includes/toasts/toast_success.html' %}
-            {% else %}
-                {% include 'includes/toasts/toast_alert.html' %}
-            {% endif %}
-        {% endwith %}
-    {% endfor %}
-</div>
+    <!-- Contact Us Modal -->
+    <div id="contact-us-modal" class="modal">
+        <div class="modal-content">
+            <div class="row">
+                <h5 class="center-align cyan-text text-darken-3">Contact Us</h5>
+                <div class="col s12">
+                    <form class="form" action="#" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="input-field col s12 mt-20">
+                                <select name="grind" class="icons validate mt-20">
+                                    <option value="none" selected>Choose Option</option>
+                                    <option value="1" data-icon="{{ MEDIA_URL }}coffee_bean_icon.png">Option 1</option>
+                                    <option value="2" data-icon="{{ MEDIA_URL }}coffee_coarse_grind_icon.png">Option 2</option>
+                                    <option value="3" data-icon="{{ MEDIA_URL }}coffee_medium_grind_icon.png">Option 3</option>
+                                    <option value="4" data-icon="{{ MEDIA_URL }}coffee_fine_grind_icon.png">Option 4</option>
+                                </select>
+                                <label class="option-label">Select Topic For Inquiry</label>
+                            </div>
+                            <div class="modal-input-field col s12">
+                                <p class="option-label">What would you like to say?</p>
+                            </div>
+                            <div class="col s12">
+                                <div class="row">
+                                    <div class="col s12 right-align">
+                                        <p>Something else...</p>
+                                    </div>
+                                </div>
+                                <div class="center-align col s12">
+                                    <button type="submit" class="waves-effect waves-light btn mt-20"><i class="material-icons left">send</i>Send Request</button>
+                                </div>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        </div>
+    </div>
 
-{% endif %}
+    {% if messages %}
+    <div class="toast-container">
+        {% for message in messages %}
+            {% with message.level as level %}
+                {% if level == 40 %}
+                    {% include 'includes/toasts/toast_error.html' %}
+                {% elif level == 30 %}
+                    {% include 'includes/toasts/toast_warning.html' %}
+                {% elif level == 25 %}
+                    {% include 'includes/toasts/toast_success.html' %}
+                {% else %}
+                    {% include 'includes/toasts/toast_alert.html' %}
+                {% endif %}
+            {% endwith %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
-{% block postloadjs %}
-<script type="text/javascript">
-    var content_navbar = document.getElementById("content-navbar");
-    var sticky = content_navbar.offsetTop
-    $(document).ready(function(){
-        $('.button-collapse').sideNav();
-        $('.parallax').parallax();
-        $('.modal').modal();
-        window.onscroll = function() {stickyContentNavbar()};
-    });
-</script>
-{% endblock %}
-
-</body>
+    {% block postloadjs %}
+    <script type="text/javascript">
+        var content_navbar = document.getElementById("content-navbar");
+        var sticky = content_navbar.offsetTop
+        $(document).ready(function(){
+            $('.button-collapse').sideNav();
+            $('.parallax').parallax();
+            $('.modal').modal();
+            window.onscroll = function() {stickyContentNavbar()};
+        });
+    </script>
+    {% endblock %}
+    </body>
 </html>
