--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load materializecss %}
 
 <!doctype html>
 <html lang="en">
@@ -208,23 +209,23 @@
             <div class="row">
                 <h5 class="center-align cyan-text text-darken-3">Contact Us</h5>
                 <div class="col s12">
-                    <form class="form" action="#" method="POST">
+                    <form class="form" action="{% url 'send_inquiry' %}" method="POST">
                         {% csrf_token %}
-                        <div class="row">
-                            <div class="input-field col s12 mt-20">
-                                <select name="grind" class="icons validate mt-20">
-                                    <option value="none" selected>Choose Option</option>
-                                    <option value="1" data-icon="{{ MEDIA_URL }}coffee_bean_icon.png">Option 1</option>
-                                    <option value="2" data-icon="{{ MEDIA_URL }}coffee_coarse_grind_icon.png">Option 2</option>
-                                    <option value="3" data-icon="{{ MEDIA_URL }}coffee_medium_grind_icon.png">Option 3</option>
-                                    <option value="4" data-icon="{{ MEDIA_URL }}coffee_fine_grind_icon.png">Option 4</option>
+                        <div class="row mt-20">
+                            <div class="modal-input-field col s12">
+                                <select name="category_selector" class="icons validate mt-20">
+                                    <option value="" selected>Choose Option *</option>
+                                    <option value="Question" data-icon="{{ MEDIA_URL }}coffee_bean_icon.png">General Questions</option>
+                                    <option value="Suggestion" data-icon="{{ MEDIA_URL }}coffee_coarse_grind_icon.png">Suggestions, Comments</option>
+                                    <option value="Claim" data-icon="{{ MEDIA_URL }}coffee_medium_grind_icon.png">Product/Order Claim</option>
+                                    <option value="Other" data-icon="{{ MEDIA_URL }}coffee_fine_grind_icon.png">Other Topics</option>
                                 </select>
                                 <label class="option-label">Select Topic For Inquiry</label>
                             </div>
                             <div class="modal-input-field col s12">
-                                <p class="option-label">What would you like to say?</p>
+                                <p class="">Please enter your contact information</p>
                             </div>
-                            <div class="col s12">
+                            <div class="modal-input-field col s12">
                                 <div class="row">
                                     <div class="col s12 right-align">
                                         <p>Something else...</p>
