added icons to peronal information in template form in profile.html

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -26,7 +26,7 @@
 					<div class="card horizontal mt-20">
 						<div class="card-stacked">
                             <div class="card-content">
-                                {{ user_info_form.first_name | materializecss:'custom_size=s12 m6' }}
+                                {{ user_info_form.first_name | materializecss:'custom_size=s12 m6, icon=fas fa-user' }}
                                 {{ user_info_form.last_name | materializecss:'custom_size=s12 m6' }}
                                 {{ user_info_form.default_email | materializecss:'icon=far fa-envelope' }}
                             </div>
