finished adding customer inquiry form functionality, updated form in base.html and its styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -353,7 +353,7 @@ header nav {
     margin-bottom: 10px;
 }
 
-.grind-option-selector input.select-dropdown {
+.select-wrapper input.select-dropdown {
     color: #26a69a;
     font-size: 1.2rem;
 }
