added email content for sending confirmation email when inquiry is sent, functionality not complete. Added styles to template form in modal

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -290,6 +290,12 @@ header nav {
     margin: 0;
 }
 
+/* Contact Us Modal */
+
+.modal-input-field .prefix {
+    width: auto !important;
+}
+
 /* All Products Page */
 
 .filter-products-collection {
