removed unnecessary javascript in different templates, fixed bug in home/views.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -274,6 +274,7 @@
             $('.button-collapse').sideNav();
             $('.parallax').parallax();
             $('.modal').modal();
+            $('select').material_select();
             window.onscroll = function() {stickyContentNavbar()};
         });
     </script>
