added links to footer and anchor to about-us section for navbar link

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -74,6 +74,7 @@
     </div>
 </div>
 <!-- About Us Section -->
+<a name='about-us-anchor' href="#"></a>
 <div class="parallax-container valign-wrapper about-parallax-container">
     <div class="section">
         <div class="about-wrapper">
