updated 404.html, updated base content in about us section, updated links products.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -67,7 +67,7 @@
                     <h2 class="center brown-text"><i class="material-icons">storefront</i></h2>
                     <h5 class="center">Start Your Experience!</h5>
 
-                    <p class="light">Search through our online store for that coffe option with your name on it. Let us contribute to improve the quality of life for many communities and families by choosing our store. We are commited to create economic opportunities for small farmers in Guatemala, as well as to meet your coffee taste expectations.</p>
+                    <p class="light">Search through our online store for that coffee option with your name on it. Let us contribute to improve the quality of life for many communities and families by choosing our store. We are commited to create economic opportunities for small farmers in Guatemala, as well as to meet your coffee taste expectations.</p>
                 </div>
             </div>
         </div>
@@ -80,18 +80,13 @@
         <div class="about-wrapper">
             <div class="row center">
                 <div class="container">
+                    <div class="center-align">
+                        <span class="btn-floating no-cursor brown"><img class="img-icon" src="{{ MEDIA_URL }}coffee_bean_icon.png" alt="Coffee Bean Icon"></span>
+                    </div>
                     <h3 class="brown-text"><i class=""></i>About Us</h3>
-                    <h5 class="header col s12 brown-text">A modern responsive front-end framework based on Material Design</h5>
-                    <p class="col s12 left-align black-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non
-                        consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo,
-                        ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium
-                        eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis
-                        nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed
-                        ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat.
-                        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                        Curae;
-                    </p>
+                    <h5 class="header col s12 brown-text">A digital coffee shop commited to create economic opportunities that improve the quality of life for families and communities in Guatemala.</h5>
+                    <p class="col s12 left-align black-text">We are a small non-profit organization working with selective small coffee farmers and cooperatives in Guatemala, in order to deliver the best quality coffee to your door, as well as creating a direct trade between the consumer and the producer. We strongly support our small coffee producers to earn a dignified income and create better economic, social and enviromental opportunities for them to live more prosperous lives. Our commited farmers carefully select the best grains to deliver high quality product to all our consumers, while we offer them 30% better and more stable prices than if they would be selling their coffee otherwise.</p>
+                    <p class="col s12 left-align black-text">Our online store offers you products from the seven most prominent coffee regions in Guatemala and depending on your grind needs we can make it available as fine or as coarse as you may wish. We are constantly searching new coffee producers so we are constantly offering new products. Make sure you try all of them and leave us a comment about your favorites!
                 </div>
             </div>                
         </div>
