--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -129,29 +129,26 @@
     </div>
     <div class="container">
         <div class="section">
-            <div class="row">
-                <div class="col s12 center">
-                    <h3><i class="mdi-content-send brown-text"></i></h3>
-                    <h4>About Us</h4>
-                    <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non
-                        consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo,
-                        ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium
-                        eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis
-                        nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed
-                        ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat.
-                        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                        Curae;</p>
-                </div>
+            <div class="about-wrapper">
+                <div class="row center">
+                    <div class="container">
+                        <div class="center-align">
+                            <span class="btn-floating no-cursor brown"><img class="img-icon" src="{{ MEDIA_URL }}coffee_bean_icon.png" alt="Coffee Bean Icon"></span>
+                        </div>
+                        <h3 class="brown-text"><i class=""></i>About Us</h3>
+                        <h5 class="header col s12 brown-text">A digital coffee shop commited to create economic opportunities that improve the quality of life for families and communities in Guatemala.</h5>
+                        <p class="col s12 left-align black-text">We are a small non-profit organization working with selective small coffee farmers and cooperatives in Guatemala, in order to deliver the best quality coffee to your door, as well as creating a direct trade between the consumer and the producer. We strongly support our small coffee producers to earn a dignified income and create better economic, social and enviromental opportunities for them to live more prosperous lives. Our commited farmers carefully select the best grains to deliver high quality product to all our consumers, while we offer them 30% better and more stable prices than if they would be selling their coffee otherwise.</p>
+                        <p class="col s12 left-align black-text">Our online store offers you products from the seven most prominent coffee regions in Guatemala and depending on your grind needs we can make it available as fine or as coarse as you may wish. We are constantly searching new coffee producers so we are constantly offering new products. Make sure you try all of them and leave us a comment about your favorites!
+                    </div>
+                </div>                
             </div>
-
         </div>
     </div>
     <div class="parallax-container valign-wrapper">
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
-                    <h5 class="header col s12 light-shadow">Unfortunately a large percentage of the Guatemalan population lives in poverty. When harvest season arrives, villagers will travel to coffee farms to work for the season in hopes to supplement their low village income.</h5>
+                    <h5 class="header col s12 light-shadow">When coffee harvest season arrives, villagers in Guatemala will travel to coffee farms to work for the season in hopes to supplement their low village income. You are doing a direct impact when you drink one of our products to support a more equitable and inclusive coffee industry in Guatemala.</h5>
                 </div>
             </div>
         </div>
