--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,8 +246,8 @@ header nav {
 }
 
 .quote-collection .secondary-content {
-    top: 50px !important;
-    right: 10px !important;
+    top: 50px;
+    right: 10px;
 }
 
 .review-primary-content {
@@ -257,7 +257,7 @@ header nav {
 }
 
 .quote-collection .avatar {
-    padding-left: 20px !important;
+    padding-left: 20px;
 }
 /* --------- Section ------------- */
 
@@ -299,11 +299,11 @@ header nav {
 /* All Products Page */
 
 .filter-products-collection {
-    overflow: visible !important;
+    overflow: visible;
 }
 
 .checkboxes-container {
-    padding-left: 20% !important;
+    padding-left: 20%;
 }
 
 .product-card-container .card-image, .product-card-container .card-content {
@@ -343,7 +343,7 @@ header nav {
 }
 
 .chip a {
-    color: rgba(0, 0, 0, 0.6) !important;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .card-content .badge {
@@ -389,7 +389,7 @@ header nav {
 }
 
 .facts-table-container {
-    padding: 0 8% !important;
+    padding: 0 8%;
 }
 
 #add-to-cart-container {
@@ -397,15 +397,15 @@ header nav {
 }
 
 #other-images-slider .indicator-item {
-    background-color: rgb(0 150 136 / 0.3) !important;
+    background-color: rgb(0 150 136 / 0.3);
 }
 
 #other-images-slider .indicator-item.active {
-    background-color: #009688 !important;
+    background-color: #009688;
 }
 
 .input-field.col .dropdown-content [type="checkbox"] + label {
-    top: -10px !important;
+    top: -10px;
     margin-top: 5px;
 }
 
@@ -415,7 +415,7 @@ header nav {
 
 .option-label {
     font-size: 1.4rem !important;
-    color: black !important;
+    color: black;
     display: block;
 }
 
@@ -441,7 +441,7 @@ header nav {
 }
 
 .modal-decrement-qty, .modal-increment-qty {
-    width: 45px !important;
+    width: 45px;
     padding: 0 !important;
 }
 
@@ -459,7 +459,7 @@ header nav {
 
 .update-form {
     width: 100%;
-    margin-left: auto !important;
+    margin-left: auto;
     margin-right: auto !important;
 }
 
@@ -546,7 +546,7 @@ footer.page-footer {
         text-align: left;
     }
     .mobile-selector {
-        display: none !important;
+        display: none;
     }
 }
 
