--- a/templates/base.html
+++ b/templates/base.html
@@ -272,8 +272,8 @@
             var aTag = $("a[name='"+ anchor +"']");
             $('html,body').animate({scrollTop: aTag.offset().top},'slow');
         }
-        var content_navbar = document.getElementById("content-navbar");
-        var sticky = content_navbar.offsetTop
+        var contentNavbar = document.getElementById("content-navbar");
+        var sticky = contentNavbar.offsetTop
         $(document).ready(function(){
             $('.button-collapse').sideNav();
             $('.parallax').parallax();
