--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -9,9 +9,9 @@
 }
 
 .green-bottom-triggered {
-    border-bottom: 1px solid #4CAF50;
-    -webkit-box-shadow: 0 1px 0 0 #4CAF50;
-    box-shadow: 0 1px 0 0 #4CAF50 !important;
+    border-bottom: 1px solid #4caf50;
+    -webkit-box-shadow: 0 1px 0 0 #4caf50;
+    box-shadow: 0 1px 0 0 #4caf50 !important;
 }
 
 #update-delivery-info-form 
@@ -39,8 +39,8 @@ li.selected span{
     border-bottom: 1px solid #a7a4a4;
 }
 
-.order-table-summary, 
-.order-table-summary th, 
+.order-table-summary,
+.order-table-summary th,
 .order-summary-wrapper {
     font-size: 14px;
     font-weight: normal;
