--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,110 +1,114 @@
 .checkout-card {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 50px;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 50px;
 }
 
 .collection-cart-summary {
-    padding-left: 35px !important;
+	padding-left: 35px !important;
 }
 
 .form-check-label a {
-    font-size: 14px;
+	font-size: 14px;
 }
 
-#save-info-box + label:after {
-    border: 2px solid #00695c;
-    background-color: #00695c;
+#save-info-box+label:after {
+	border: 2px solid #00695c;
+	background-color: #00695c;
 }
 
 .StripeElement {
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    border-radius: 0;
-    outline: none;
-    font-size: 1.1rem;
-    height: 3rem;
-    width: 100%;
-    margin: 0 0 20px 0;
-    padding: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid #9e9e9e;
+	border-radius: 0;
+	outline: none;
+	font-size: 1.1rem;
+	height: 3rem;
+	width: 100%;
+	margin: 0 0 20px 0;
+	padding: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
 }
 
 .StripeElement--focus {
-    border-bottom: 1px solid #26a69a;
-    box-shadow: 0 1px 0 0 #26a69a;
+	border-bottom: 1px solid #26a69a;
+	box-shadow: 0 1px 0 0 #26a69a;
 }
 
 .StripeElement--invalid {
-    border-bottom: 1px solid #d62703;
-    box-shadow: 0 1px 0 0 #d62703;
+	border-bottom: 1px solid #d62703;
+	box-shadow: 0 1px 0 0 #d62703;
 }
 
 .StripeElement--complete {
-    border-bottom: 1px solid #4CAF50;
-    -webkit-box-shadow: 0 1px 0 0 #4CAF50;
-    box-shadow: 0 1px 0 0 #4CAF50;
+	border-bottom: 1px solid #4CAF50;
+	-webkit-box-shadow: 0 1px 0 0 #4CAF50;
+	box-shadow: 0 1px 0 0 #4CAF50;
 }
 
 .StripeElement--webkit-autofill {
-  background-color: #fefde5;
+	background-color: #fefde5;
 }
+
 
 /* Preloader Cirlce */
 
 #loading-overlay {
 	display: none;
 	position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(211, 18, 69, 0.3);
-    z-index: 9999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(211, 18, 69, 0.3);
+	z-index: 9999;
 }
 
 .preloader-wrapper.giant {
-    width: 200px;
-    height: 200px;
+	width: 200px;
+	height: 200px;
 }
 
 .loader {
-    position: absolute;
-    top :0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
 }
+
 
 /* -------------------------------------Media Querries --------------- */
 
+
 /* Small */
-@media only screen and (max-width : 768px) {
-    .submit-button {
-        text-align: center;
-    }
-    
+
+@media only screen and (max-width: 768px) {
+	.submit-button {
+		text-align: center;
+	}
 }
 
+
 /* Tablet */
-@media only screen and (min-width : 768px) {
-    .checkout-card {
-        width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
+
+@media only screen and (min-width: 768px) {
+	.checkout-card {
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+	}
 }
+
 
 /* Large */
 
-@media only screen and (min-width: 1024px) {
-
-}
+@media only screen and (min-width: 1024px) {}
