--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,6 @@ body {
 	font-size: 20px;
 }
 
-
 /* ---------- Text, Margin, Paddings ---- */
 
 p {
@@ -82,7 +81,6 @@ p {
 	text-align: center;
 }
 
-
 /* ---------- Navbar ------------ */
 
 #navbar-background {
@@ -121,7 +119,7 @@ header nav {
 }
 
 .mobile-top-header a i {
-	margin: 0px 5px;
+	margin: 0 5px;
 }
 
 .nav-content .btn {
@@ -132,7 +130,7 @@ header nav {
 	line-height: 30px;
 }
 
-.side-nav li>a.btn {
+.side-nav li > a.btn {
 	margin: 20px 15px;
 	font-size: 20px;
 }
@@ -183,7 +181,6 @@ header nav {
 	transform: translateX(-50%);
 }
 
-
 /* Action Buttons Desktop  */
 
 .btn-floating-label {
@@ -196,7 +193,6 @@ header nav {
 	color: #FFF;
 	border-radius: 2px;
 }
-
 
 /* --------- Parallax ----------- */
 
@@ -266,7 +262,6 @@ header nav {
 	padding-left: 20px;
 }
 
-
 /* --------- Section ------------- */
 
 .icon-block {
@@ -287,7 +282,6 @@ header nav {
 	background-color: #26a69a;
 }
 
-
 /* ---------- Search Modal ------ */
 
 #search-bar-modal .modal-content {
@@ -306,13 +300,11 @@ header nav {
 	margin: 0;
 }
 
-
 /* Contact Us Modal */
 
 .modal-input-field .prefix {
 	width: auto !important;
 }
-
 
 /* All Products Page */
 
@@ -382,7 +374,6 @@ header nav {
 	color: #26a69a;
 	font-size: 1.2rem;
 }
-
 
 /* Detail Product Page */
 
@@ -472,7 +463,6 @@ header nav {
 	padding: 10px;
 }
 
-
 /* Cart Page */
 
 .div-cover-image {
@@ -507,16 +497,13 @@ header nav {
 	width: 60px;
 }
 
-
 /* ---------- Footer ------------ */
 
 footer.page-footer {
 	margin: 0;
 }
 
-
 /* -------------------------------------Media Querries --------------- */
-
 
 /* Small */
 
@@ -528,7 +515,6 @@ footer.page-footer {
 		height: 180px;
 	}
 }
-
 
 /* Tablet */
 
@@ -577,7 +563,6 @@ footer.page-footer {
 		display: none;
 	}
 }
-
 
 /* Large */
 
